# bio-forge

./: .gitignore  API.md  ARCHITECTURE.md  Cargo.toml  MANUAL.md  README.md
.github/workflows/: ci.yml  deploy.yml  release.yml
crates/bio-forge/: Cargo.toml
crates/bio-forge-wasm/: Cargo.toml
crates/bio-forge-wasm/src/: lib.rs
crates/bio-forge/src/db/: schema.rs
crates/bio-forge/src/io/: context.rs  mod.rs
crates/bio-forge/src/io/mmcif/: reader.rs
crates/bio-forge/src/io/mol2/: reader.rs
crates/bio-forge/src/io/pdb/: writer.rs
crates/bio-forge/src/model/: atom.rs  chain.rs  template.rs  types.rs
crates/bio-forge/src/ops/: error.rs  hydro.rs  mod.rs  repair.rs  topology.rs  transform.rs
crates/bio-forge/src/utils/: parallel.rs
crates/bio-forge/templates/nucleic/: A.toml  C.toml  DA.toml  DC.toml  DG.toml  DI.toml  DT.toml  G.toml  I.toml  U.toml
crates/bio-forge/templates/protein/: ALA.toml  ARG.toml  ASH.toml  ASN.toml  ASP.toml  CYM.toml  CYS.toml  CYX.toml  GLH.toml  GLN.toml  GLU.toml  GLY.toml  HID.toml  HIE.toml  HIP.toml  ILE.toml  LEU.toml  LYN.toml  LYS.toml  MET.toml  PHE.toml  PRO.toml  SER.toml  THR.toml  TRP.toml  TYM.toml  TYR.toml  VAL.toml
crates/bio-forge/templates/solvent/: HOH.toml
examples/basic/: README.md
examples/pipeline/: README.md
src/: lib.rs  templates.rs
src/db/: loader.rs  mod.rs  schema.rs  store.rs
src/io/: context.rs  error.rs  mod.rs
src/io/mmcif/: reader.rs  writer.rs
src/io/mol2/: reader.rs
src/io/pdb/: reader.rs  writer.rs
src/model/: atom.rs  chain.rs  grid.rs  mod.rs  residue.rs  structure.rs  template.rs  topology.rs  types.rs
src/ops/: clean.rs  error.rs  hydro.rs  mod.rs  repair.rs  solvate.rs  topology.rs  transform.rs
src/utils/: mod.rs  parallel.rs
templates/: README.md
templates/nucleic/: A.toml  C.toml  DA.toml  DC.toml  DG.toml  DI.toml  DT.toml  G.toml  I.toml  U.toml
templates/protein/: ALA.toml  AR0.toml  ARG.toml  ARN.toml  ASH.toml  ASN.toml  ASP.toml  CYM.toml  CYS.toml  CYX.toml  GLH.toml  GLN.toml  GLU.toml  GLY.toml  HID.toml  HIE.toml  HIP.toml  ILE.toml  LEU.toml  LYN.toml  LYS.toml  MET.toml  PHE.toml  PRO.toml  SER.toml  THR.toml  TRP.toml  TYM.toml  TYR.toml  VAL.toml
web/: eslint.config.mjs  next.config.ts  package-lock.json  package.json  tsconfig.json
web/src/app/: page.tsx  providers.tsx
web/src/app/app/: page.tsx
web/src/core/: index.ts
web/src/core/file/: exporter.ts  index.ts  types.ts
web/src/core/pipeline/: config.ts  executor.ts  index.ts
web/src/core/wasm/: structure.ts  types.ts
web/src/features/files/: file-actions.tsx  file-list.tsx
web/src/features/header/: app-header.tsx  index.ts
web/src/features/home/: features.tsx  hero.tsx
web/src/features/pipeline/: index.ts  step-clean.tsx  step-hydro.tsx  step-repair.tsx  step-solvate.tsx  step-topology.tsx
web/src/features/viewer/: index.ts
web/src/layouts/: app-layout.tsx  home-layout.tsx
web/src/lib/: constants.ts  index.ts  utils.ts
web/src/state/: index.ts
web/src/state/hooks/: index.ts  use-file-upload.ts  use-processor.ts  use-wasm-init.ts
web/src/state/stores/: file-store.ts
web/src/ui/patterns/: dropzone.tsx  empty-state.tsx  global-dropzone.tsx  index.ts  modal.tsx
web/src/ui/primitives/: badge.tsx  checkbox.tsx  collapsible.tsx  dropdown.tsx  index.ts  input.tsx  select.tsx  slider.tsx  textarea.tsx  tooltip.tsx
