[package]
name = "bio-forge"
version = "0.3.0"
authors = ["Tony Kan <tianchengkan@gmail.com>"]
license = "MIT"
repository = "https://github.com/TKanX/bio-forge"
edition = "2024"
description = "A pure Rust library and CLI for the automated repair, preparation, and topology construction of biological macromolecules."
keywords = [
    "bioinformatics",
    "chemoinformatics",
    "proteins",
    "nucleic-acids",
    "pdb",
]
categories = ["science", "science::bioinformatics", "command-line-utilities"]
readme = "README.md"
exclude = ["examples/"]

[dependencies]
smol_str = "0.3.4"
thiserror = "2.0.17"
nalgebra = "0.34.1"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.8"
rayon = { version = "1.11.0", optional = true }
anyhow = { version = "1.0.100", optional = true }
clap = { version = "4.5.53", features = ["derive"], optional = true }
prettytable-rs = { version = "0.10.0", optional = true }
indicatif = { version = "0.18.3", optional = true }
getrandom = { version = "0.3.4", default-features = false, features = [
    "wasm_js",
], optional = true }

[lib]
name = "bio_forge"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "bioforge"
path = "src/bin/bioforge.rs"
required-features = ["cli"]

[features]
default = ["cli", "parallel"]
cli = ["dep:anyhow", "dep:clap", "dep:prettytable-rs", "dep:indicatif"]
parallel = ["dep:rayon"]
wasm = ["dep:getrandom"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
