[workspace]
resolver = "3"
members = ["crates/bio-forge", "crates/bio-forge-wasm"]

[workspace.package]
version = "0.4.0"
authors = ["Tony Kan <tianchengkan@gmail.com>"]
license = "MIT"
repository = "https://github.com/TKanX/bio-forge"
edition = "2024"
readme = "README.md"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
