[package]
name = "bio-forge-wasm"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
readme.workspace = true
publish = false

[dependencies]
bio-forge = { path = "../bio-forge" }
wasm-bindgen = "0.2.106"
console_error_panic_hook = "0.1.7"
serde = { version = "1.0.228", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
tsify = { version = "0.5.6", features = ["js"] }
js-sys = "0.3.83"
getrandom = { version = "0.3.4", features = ["wasm_js"] }

[lib]
crate-type = ["cdylib", "rlib"]
name = "bio_forge_wasm"
path = "src/lib.rs"

[package.metadata.wasm-pack.profile.release]
wasm-opt = [
    "-O4",
    "--enable-bulk-memory",
    "--enable-mutable-globals",
    "--enable-nontrapping-float-to-int",
    "--enable-sign-ext",
]
